--- a/build.gradle
+++ b/build.gradle
@@ -5,13 +5,22 @@ buildscript {
     jcenter()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:2.3.3'
-
-    // NOTE: Do not place your application dependencies here; they belong
-    // in the individual module build.gradle files
+    //    classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.2'
+    //    classpath 'com.github.dcendents:android-maven-gradle-plugin:1.4.1'
+    classpath 'com.android.tools.build:gradle:2.1.3'
+    classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7'
+    classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
   }
+
 }
 
+
+ext {
+  compileSdkVersion = 23
+  buildToolsVersion = "23.0.3"
+  targetSdkVersion = 23
+
+}
 allprojects {
   repositories {
     jcenter()
