--- a/ijkplayer-code/build.gradle
+++ b/ijkplayer-code/build.gradle
@@ -1,18 +1,99 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.github.dcendents.android-maven'
+apply plugin: 'com.jfrog.bintray'
 
+version = "1.0.0"
 android {
-    compileSdkVersion 22
+    compileSdkVersion 19
     buildToolsVersion '25.0.0'
-
     defaultConfig {
         minSdkVersion 9
-        targetSdkVersion 9
+        targetSdkVersion rootProject.ext.targetSdkVersion
     }
-
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
 }
+
+
+dependencies {
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+}
+def siteUrl = 'https://github.com/SuperKetchup/ijkcore' // 项目的主页
+def gitUrl = 'https://github.com/SuperKetchup/ijkcore.git' // Git 仓库的
+
+group = "com.github.superketchup.ijkcore"
+
+install {
+    repositories.mavenInstaller {
+        // This generates POM.xml with proper parameters
+        pom {
+            project {
+                packaging 'aar'
+                // Add your description here
+                name ' ijklib core so' //项目描述
+                url siteUrl
+                // Set your license
+                licenses {
+                    license {
+                        name 'The Apache Software License, Version 2.0'
+                        url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                    }
+                }
+                developers {
+                    developer {
+                        id 'ben.zhao'    //填写的一些基本信息
+                        name 'ben.zhao'
+                        email 'ben.zhao@zeasn.com'
+                    }
+                }
+                scm {
+                    connection gitUrl
+                    developerConnection gitUrl
+                    url siteUrl
+                }
+            }
+        }
+    }
+}
+
+task sourcesJar(type: Jar) {
+    from android.sourceSets.main.java.srcDirs
+    classifier = 'sources'
+}
+task javadoc(type: Javadoc) {
+    options.encoding = "utf-8"
+    source = android.sourceSets.main.java.srcDirs
+    failOnError false
+    classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
+    classpath += project.files(configurations.compile.files,android.getBootClasspath().join(File.pathSeparator))
+}
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+artifacts {
+    archives javadocJar
+    archives sourcesJar
+}
+Properties properties = new Properties()
+properties.load(project.rootProject.file('local.properties').newDataInputStream())
+bintray {
+    user = properties.getProperty("bintray.user")
+    key = properties.getProperty("bintray.apikey")
+    configurations = ['archives']
+    pkg {
+        repo = "zeasn"
+        name = "ijkcore"    //发布到JCenter上的项目名字
+        websiteUrl = siteUrl
+        vcsUrl = gitUrl
+        licenses = ["Apache-2.0"]
+        publish = true
+    }
+}
+
+apply plugin: 'maven'
+
